Updated swagger file, added ccxt endpoint
