# server/api/v0/ccxt.js
@@ -3,18 +3,22 @@ const router = require('express').Router();
 
 router.get('/exchanges', async (req, res)=>{
     try{
-        const exchanges = ccxt.exchanges;
-        res.send({exchanges});
+        const data = ccxt.exchanges;
+        res.send(data);
     }catch(e){
         res.status(400).send(e);
     }
 });
 
 router.get('/exchange/:id', async (req, res)=>{
-    try{
+    try{        
         const id = req.params.id;
-        const exchange = new ccxt[id];
-        res.send({exchange});
+        if (ccxt.exchanges.includes(id)){
+            const exchange = new ccxt[id];
+            return res.send({exchange});
+        } else{
+            res.status(404).send("Exchange with this ID does not exist");    
+        }
     }catch(e){
         res.status(400).send(e);
     }
@@ -22,13 +26,16 @@ router.get('/exchange/:id', async (req, res)=>{
 router.get('/exchange/:id/markets', async (req, res)=>{
     try{
         const id = req.params.id;
+        if (!ccxt.exchanges.includes(id)){
+            return res.status(404).send("Exchange with this ID does not exist");
+        }
         const exchange = new ccxt[id];
         const markets = await exchange.load_markets();
         const keys = Object.keys(markets);
         keys.sort((a,b)=>{
             return a>b ? 1: -1;
         });
-        res.send({markets: keys});
+        res.send(keys);
     }catch(e){
         res.status(400).send(e);
     }
@@ -37,9 +44,15 @@ router.get('/exchange/:id/market/:marketid', async (req, res)=>{
     try{
         const id = req.params.id;
         const marketid = req.params.marketid;
+        if (!ccxt.exchanges.includes(id)){
+            return res.status(404).send(`Exchange with id ${id} does not exist`);
+        }
         const exchange = new ccxt[id];
         const markets = await exchange.load_markets();
         const market = markets[marketid];
+        if (!market){
+            return res.status(404).send(`Market ${marketid} is not found for exchange ${id}`);
+        }
         res.send({market});
     }catch(e){
         res.status(400).send(e);
